# Alioth

./: .env.example  .envrc  .gitignore  .justfile  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml  requirements.txt
alioth/birthday_reminder/: __init__.py  commands.py  common.py  core.py  tools.py
alioth/birthday_reminder/application/: __init__.py  reminder_service.py  session_flow.py
alioth/birthday_reminder/domain/: __init__.py  models.py  prompts.py  rules.py  state.py
alioth/birthday_reminder/entrypoints/: __init__.py  command.py  schedule.py  tool.py
alioth/configs/: __init__.py  config.py
alioth/infrastructure/: __init__.py  context.py  initialization.py  llm_tools.py  messaging.py  metadata.py  termination.py
alioth/infrastructure/config/: __init__.py  plugin.py
alioth/infrastructure/database/: __init__.py  birthday_repo.py  runtime.py
alioth/tools/: __init__.py  birthday_reminder.py
alioth/tools/birthday_reminder/: __init__.py  command.py  common.py  core.py  tool.py
alioth/utils/: __init__.py  common.py  database.py  initialize.py  message.py  metadata.py  paths.py  terminate.py
