[project]
name = "alioth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astrbot>=4.22.1",
    "returns[compatible-mypy]>=0.26.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.4",
]

[tool.ty.environment]
root = ["."]

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
ignore_missing_imports = true
strict = true
local_partial_types = true
warn_unreachable = true

enable_error_code = [
  "truthy-bool",
  "truthy-iterable",
  "redundant-expr",
  "unused-awaitable",
  # "ignore-without-code",
  "possibly-undefined",
  "redundant-self",
  # "explicit-override",
  # "mutable-override",
  "unimported-reveal",
  "deprecated",
  "exhaustive-match",
]

disable_error_code = [
  "no-untyped-def", # TODO: fix
]

[[tool.mypy.overrides]]
module = "wemake_python_styleguide.compat.nodes"
# We allow explicit `Any` only in this file, because of the compatibility:
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "wemake_python_styleguide.compat.packaging"
# We allow unused `ignore` comments, because we cannot sync it between versions:
warn_unused_ignores = false
